Ya se puede cambiar Contraseña y se soluciona el problema al cerrar todos los forms

--- a/SIMEDVirtual/SIMEDVirtual/frmVerExpediente.resx
+++ b/SIMEDVirtual/SIMEDVirtual/frmVerExpediente.resx
@@ -456,6 +456,60 @@
   <data name="&gt;&gt;btnPdf.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>405, 17</value>
+  </metadata>
+  <data name="menuStrip1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>None</value>
+  </data>
+  <data name="cERRASESIONToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 9.75pt, style=Bold</value>
+  </data>
+  <data name="cERRASESIONToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 26</value>
+  </data>
+  <data name="cERRASESIONToolStripMenuItem.Text" xml:space="preserve">
+    <value>CAMBIAR CONTRASEÑA</value>
+  </data>
+  <data name="sALIRToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 26</value>
+  </data>
+  <data name="sALIRToolStripMenuItem.Text" xml:space="preserve">
+    <value>SALIR</value>
+  </data>
+  <data name="mICUENTAToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 12pt, style=Bold</value>
+  </data>
+  <data name="mICUENTAToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>126, 25</value>
+  </data>
+  <data name="mICUENTAToolStripMenuItem.Text" xml:space="preserve">
+    <value>MI CUENTA</value>
+  </data>
+  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1093, 11</value>
+  </data>
+  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 29</value>
+  </data>
+  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>31</value>
+  </data>
+  <data name="menuStrip1.Text" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
@@ -858,6 +912,42 @@
   <data name="&gt;&gt;lblInfoPaciente.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
+  <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>269, 17</value>
+  </metadata>
+  <data name="btnEditaExpediente.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9.75pt, style=Bold</value>
+  </data>
+  <data name="btnEditaExpediente.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="btnEditaExpediente.Location" type="System.Drawing.Point, System.Drawing">
+    <value>859, 174</value>
+  </data>
+  <data name="btnEditaExpediente.Size" type="System.Drawing.Size, System.Drawing">
+    <value>66, 58</value>
+  </data>
+  <data name="btnEditaExpediente.TabIndex" type="System.Int32, mscorlib">
+    <value>3</value>
+  </data>
+  <data name="btnEditaExpediente.Text" xml:space="preserve">
+    <value>Editar</value>
+  </data>
+  <data name="btnEditaExpediente.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
+    <value>ImageAboveText</value>
+  </data>
+  <data name="&gt;&gt;btnEditaExpediente.Name" xml:space="preserve">
+    <value>btnEditaExpediente</value>
+  </data>
+  <data name="&gt;&gt;btnEditaExpediente.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnEditaExpediente.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;btnEditaExpediente.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
   <data name="btnReconsulta.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 11.25pt, style=Bold</value>
   </data>
@@ -918,42 +1008,6 @@
   <data name="&gt;&gt;btnBuscar.ZOrder" xml:space="preserve">
     <value>7</value>
   </data>
-  <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>269, 17</value>
-  </metadata>
-  <data name="btnEditaExpediente.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9.75pt, style=Bold</value>
-  </data>
-  <data name="btnEditaExpediente.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="btnEditaExpediente.Location" type="System.Drawing.Point, System.Drawing">
-    <value>859, 174</value>
-  </data>
-  <data name="btnEditaExpediente.Size" type="System.Drawing.Size, System.Drawing">
-    <value>66, 58</value>
-  </data>
-  <data name="btnEditaExpediente.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="btnEditaExpediente.Text" xml:space="preserve">
-    <value>Editar</value>
-  </data>
-  <data name="btnEditaExpediente.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
-    <value>ImageAboveText</value>
-  </data>
-  <data name="&gt;&gt;btnEditaExpediente.Name" xml:space="preserve">
-    <value>btnEditaExpediente</value>
-  </data>
-  <data name="&gt;&gt;btnEditaExpediente.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnEditaExpediente.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;btnEditaExpediente.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -1007,6 +1061,24 @@
   </data>
   <data name="&gt;&gt;toolTip1.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolTip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;mICUENTAToolStripMenuItem.Name" xml:space="preserve">
+    <value>mICUENTAToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;mICUENTAToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cERRASESIONToolStripMenuItem.Name" xml:space="preserve">
+    <value>cERRASESIONToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;cERRASESIONToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;sALIRToolStripMenuItem.Name" xml:space="preserve">
+    <value>sALIRToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;sALIRToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;ID.Name" xml:space="preserve">
     <value>ID</value>
